--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -371,7 +371,7 @@ body {
 }
 
 .patientDetails col {
-	min-width: 140px;
+	min-width: 120px;
 }
 
 .patientControls {
@@ -386,6 +386,11 @@ body {
     min-height: 26px;
 }
 
+.tabStyle {
+	/*position: relative;*/
+	margin: 8px auto;
+	width: 98%;
+}
 /* #loading {
 	position: absolute;
 	margin: 100px auto;
