--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -366,7 +366,10 @@ a:hover, .gwt-Anchor:hover {
 }
 
 .gwt-ListBox {
-	
+	padding: 0 2px;
+	-moz-border-radius: 4px;
+	height: 21px;
+	font-size: 90%;
 }
 
 .gwt-MenuBar {
@@ -558,7 +561,7 @@ a:hover, .gwt-Anchor:hover {
 	opacity: 0.9;
 	
 	/* Hack for compatibility with customized tabpanel */
-	z-index: 200;
+	/* z-index: 200; */
 }
 
 .gwt-DecoratedPopupPanel .popupContent {
@@ -1060,7 +1063,6 @@ a:hover, .gwt-Anchor:hover {
 .gwt-TabBar .gwt-TabBarItem-selected {
 	border-bottom: 0 none;
     padding: 7px 20px 8px;
-    z-index: 100 !important;
 }
 
 .gwt-TabBar .gwt-TabBarItem-selected, .gwt-TabBar .gwt-TabBarItem-selected:hover {
