--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -396,6 +396,7 @@ body {
 	padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 6px;
+	margin-bottom: 8px;
 }
 
 .tabStyle { /*position: relative;*/
