--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/a_nonroo/client/styles.css
@@ -1,3 +1,17 @@
+/*spec*/
+.popUpBorder{
+	margin: 15px auto;
+    width: 90%;
+     border-color: #808080;
+    border-radius: 16px 16px 16px 16px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.center{
+	align:center;
+}
+/*spec end*/
 .errors {
 	padding-left: 0.5em;
 	background-color: red;
@@ -397,6 +411,20 @@ body {
 	padding-right: 8px;
 	padding-top: 6px;
 	margin-bottom: 8px;
+}
+
+}
+.patientTopContainer{
+	border-color: #808080;
+	border-style: solid;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	-moz-border-radius-bottomleft: 16px;
+	-moz-border-radius-bottomright: 16px;
+	-moz-border-radius-topleft: 16px;
+	-moz-border-radius-topright: 16px;	
 }
 
 .tabStyle { /*position: relative;*/
